# skadi

./: .env.example  .gitignore  .pre-commit-config.yaml  NEXT_STEPS.md  README.md  WARP.md  main.py  pyproject.toml
.claude/: claude.md
examples/: README.md  circuit_manipulation_demo.py  context7_example.py  context7_live_mcp_example.py  context7_mcp_demo.py  enhanced_generation_demo.py  generate_circuit.py  scrape_docs.py  use_knowledge_base.py
skadi/: __init__.py  cli.py  config.py
skadi/backends/: __init__.py  base.py  braket.py  executor.py  lightning.py  local.py  recommender.py  registry.py
skadi/core/: __init__.py  circuit_file_manager.py  circuit_generator.py  circuit_manipulator.py  circuit_representation.py  visualizer.py
skadi/engine/: __init__.py  context7_client.py  context7_tools.py  knowledge_base.py  llm_client.py
skadi/knowledge/: __init__.py  augmenter.py  config.py  context7_client.py  pennylane_kb.py  protocol.py
skadi/manipulation/: __init__.py  analyzer.py  optimizer.py  rewriter.py  transformer.py
skadi/utils/: __init__.py  doc_scraper.py
tests/: __init__.py  conftest.py  test_backends.py  test_circuit_generator.py  test_circuit_representation.py  test_context7_client.py  test_context7_tools.py  test_functional.py  test_knowledge_base.py  test_knowledge_protocol.py  test_manipulation.py
