[project]
name = "skadi"
version = "0.1.0"
description = "Generate and manipulate quantum circuits using natural language"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Skadi Contributors" }
]
keywords = ["quantum", "pennylane", "circuit", "natural-language", "llm", "quantum-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "agno>=2.2.13",
    "crawl4ai>=0.7.7",
    "lancedb>=0.25.3",
    "openai>=2.8.0",
    "pennylane>=0.43.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/kessler-frost/skadi"
Repository = "https://github.com/kessler-frost/skadi"

[project.scripts]
skadi = "skadi.cli:cli"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=8.0.0",
    "ruff>=0.14.5",
]
